infra/k3s/server/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: blog-frontend
  labels:
    app: frontend
    tier: frontend
spec:
  selector:
    app: frontend
    tier: frontend
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  type: ClusterIP
